--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 <body>
     <p> I am Cornelius Dongo Orinami a seasoned expect in Data Analytics and
         virtual Assistant. I enjoy playing keyboard more than anything. thank you so much
+
     </p>
+
+
+    <p> I am currrently pursing a career in Full Stact Software Developer in years and more
+        than two year 2025. T hanks to mr Tosin
+   </p>
+   I am Cornelius Dongo Orinami a seasoned expect in Data Analytics and
+   virtual Assistant. I enjoy playing keyboard more than anything
+</p>
+
 
    
 </body>
