--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
 </head>
 <body>
     <p> I am Cornelius Dongo Orinami a seasoned expect in Data Analytics and
-        virtual Assistant. I enjoy playing keyboard more than anything. thank you so much
+        virtual Assistant. I enjoy playing keyboard more than anything. 
+        its lovely to have you by my side
     </p>
 
+    <p>Over the past years, I worked as a Tutor in  Missonary school in lagos state.
+        I taught Mathematics for junior seconday school for about 3 years and more than two years.
+        
+        <h1> PIPLE LINE</h1>
+        <ul>
+            <li>dev</li>
+            <li>Sit</li>
+            <li>UAT</li>
+            <li>Main</li>
+            <li>Prod</li>
+        </ul>
+        <p>Thanks</p>
    
 </body>
 </html>
